Revert "Change navbar"
This reverts commit c380b1ededdc16eb7199f064a08e33957eb11ce0.

--- a/client/src/components/features/NavBar/NavBar.scss
+++ b/client/src/components/features/NavBar/NavBar.scss
@@ -1,7 +1,5 @@
-.navbar {
+.nav-bar {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  flex-wrap: wrap;
-  margin: -14px -28px 0;
 }
