Add edit post page

--- a/client/src/components/features/PostSummary/PostSummary.scss
+++ b/client/src/components/features/PostSummary/PostSummary.scss
@@ -6,7 +6,7 @@
   margin-bottom: $base-size;
   margin-left: $base-size;
   transition: .2s;
-  cursor: pointer;
+  cursor: default;
 }
 
 .post-summary:hover {
